--- a/src/components/Login/LoginForm/LoginForm.module.css
+++ b/src/components/Login/LoginForm/LoginForm.module.css
@@ -11,7 +11,7 @@
 }
 .formContent {
     display: grid;
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-rows: 3fr 3fr 1fr 3fr;
 }
 .buttons {
     width: 100%;
@@ -22,6 +22,15 @@
 }
 
 .rememberMe {
-    display: grid;
-    grid-template-columns: 2fr 1fr;
+    display: flex;
+    align-self: center;
+    justify-self: center;
+    justify-content: space-around;
+}
+
+.rememberMe * {
+    display: flex;
+    align-content: center;
+    padding: 0 10px 0 10px;
+    align-self: center;
 }
